# ai-candidate-evaluation

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
backend/: settings.py  urls.py
chroma/: chroma.sqlite3
core/: admin.py  apps.py  models.py  serializers.py  serializers_reference.py  tasks.py  urls.py  views.py  views_eval.py  views_reference.py  views_reference_set.py  views_result.py  views_retrieve.py
core/management/commands/: reindex_all.py
core/migrations/: 0001_initial.py  0002_referenceset_document_ref_set.py  0003_job_reference_set.py
core/services/: chunker.py  collections.py  embeddings.py  evaluation.py  llm_client.py  prompts.py  rag.py  retrieval.py  schemas.py  storage.py  text_extractor.py  vectordb.py  vectordb_chroma.py
core/tests/: test_health.py  test_models.py
src/app/: hello.py
src/app.egg-info/: SOURCES.txt
tests/: test_add.py
